@@ -2,6 +2,8 @@
 v6.2.1-git
 ----------
 
+[mms] Don't perform purge sentmail login task unless at least one sentmail
+      mailbox exists.
 [mms] Don't perform purge Spam login task unless Spam mailbox exists.
 [mms] Fix dragging a mailbox to the base level in dynamic view.
 [mms] Add ability to drag/drop text to dynamic HTML compose window on Chrome
